--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                     <div class="card-head">
 
-                        <img src="./images/image-irene.jpg">
+                        <img src="./images/image-colton.jpg">
                         <div class="info">
                             <span class="name"> Colton Smith </span><br>
                             <span class="status">Verified Buyer</span>
@@ -112,15 +112,14 @@
 
                         <img src="./images/image-irene.jpg">
                         <div class="info">
-                            <span class="name"> Colton Smith </span><br>
+                            <span class="name"> Irene Roberts </span><br>
                             <span class="status">Verified Buyer</span>
 
                         </div>
 
                     </div>
                     <p>
-                        "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
-                    </p>
+                        Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery." Anne Wallace Verified Buyer </p>
 
 
                 </div>
@@ -130,17 +129,16 @@
 
                     <div class="card-head">
 
-                        <img src="./images/image-irene.jpg">
+                        <img src="./images/image-anne.jpg">
                         <div class="info">
-                            <span class="name"> Colton Smith </span><br>
+                            <span class="name"> Anne Wallace</span><br>
                             <span class="status">Verified Buyer</span>
 
                         </div>
 
                     </div>
                     <p>
-                        "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
-                    </p>
+                        Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone! </p>
 
 
                 </div>
