--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="top">
                 <div class="quote">
 
-                    <span class="header">10,000+ of our users love our products.</span>
+                    <h2 class="header">10,000+ of our users love our products.</h2>
                     <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. </p>
 
                 </div>
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="reviewtext">
-                            <span>Rated 5 Stars in Reviews </span>
+                            <span>Rated 5 Stars in Report Guru </span>
 
                         </div>
 
@@ -77,7 +77,7 @@
                         </div>
 
                         <div class="reviewtext">
-                            <span>Rated 5 Stars in Reviews </span>
+                            <span>Rated 5 Stars in BestTech </span>
 
                         </div>
 
